--- a/views/potting_certification_views.xml
+++ b/views/potting_certification_views.xml
@@ -9,7 +9,10 @@
                 <field name="sequence" widget="handle"/>
                 <field name="name" decoration-bf="1"/>
                 <field name="suffix" decoration-bf="1" class="text-primary"/>
-                <field name="description" optional="show"/>
+                <field name="price_type" optional="show"/>
+                <field name="price_per_ton" optional="show"/>
+                <field name="price_percentage" optional="show"/>
+                <field name="description" optional="hide"/>
                 <field name="lot_count" string="Lots"/>
                 <field name="active" widget="boolean_toggle"/>
             </tree>
@@ -48,6 +51,18 @@
                         </group>
                         <group string="Affichage">
                             <field name="color" widget="color_picker"/>
+                        </group>
+                    </group>
+                    <group>
+                        <group string="💰 Prime">
+                            <field name="currency_id" invisible="1"/>
+                            <field name="price_type"/>
+                            <field name="price_per_ton" invisible="price_type != 'fixed'"/>
+                            <field name="price_percentage" invisible="price_type != 'percentage'"/>
+                        </group>
+                        <group string="📊 Statistiques">
+                            <field name="total_premium_amount"/>
+                            <field name="total_tonnage" string="Tonnage total certifié"/>
                         </group>
                     </group>
                     <notebook>
