Correction : Cacher les champs du paiement normal lorsque le paiement est groupé.

--- a/views/potting_menu_views.xml
+++ b/views/potting_menu_views.xml
@@ -18,7 +18,7 @@
 
     <!-- Main Menu - Now uses base group -->
     <menuitem id="menu_potting_root" 
-              name="📦 Empotages" 
+              name="📦 Exportations" 
               sequence="3"
               web_icon="potting_management,static/description/icon.png"
               groups="potting_management.group_potting_user"/>
